tests/ui/const-generics/const-arg-in-const-arg.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:15:23
   |
LL |     let _: [u8; foo::<T>()];
   |                       ^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:16:23
   |
LL |     let _: [u8; bar::<N>()];
   |                       ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:19:23
   |
LL |     let _: [u8; faz::<'a>(&())];
   |                       ^^ cannot perform const operation using `'a`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:21:23
   |
LL |     let _: [u8; baz::<'a>(&())];
   |                       ^^ cannot perform const operation using `'a`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:22:23
   |
LL |     let _: [u8; faz::<'b>(&())];
   |                       ^^ cannot perform const operation using `'b`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:24:23
   |
LL |     let _: [u8; baz::<'b>(&())];
   |                       ^^ cannot perform const operation using `'b`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:27:23
   |
LL |     let _ = [0; bar::<N>()];
   |                       ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:30:23
   |
LL |     let _ = [0; faz::<'a>(&())];
   |                       ^^ cannot perform const operation using `'a`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:32:23
   |
LL |     let _ = [0; baz::<'a>(&())];
   |                       ^^ cannot perform const operation using `'a`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:33:23
   |
LL |     let _ = [0; faz::<'b>(&())];
   |                       ^^ cannot perform const operation using `'b`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:35:23
   |
LL |     let _ = [0; baz::<'b>(&())];
   |                       ^^ cannot perform const operation using `'b`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:36:24
   |
LL |     let _: Foo<{ foo::<T>() }>;
   |                        ^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:37:24
   |
LL |     let _: Foo<{ bar::<N>() }>;
   |                        ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:40:24
   |
LL |     let _: Foo<{ faz::<'a>(&()) }>;
   |                        ^^ cannot perform const operation using `'a`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:42:24
   |
LL |     let _: Foo<{ baz::<'a>(&()) }>;
   |                        ^^ cannot perform const operation using `'a`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:43:24
   |
LL |     let _: Foo<{ faz::<'b>(&()) }>;
   |                        ^^ cannot perform const operation using `'b`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:45:24
   |
LL |     let _: Foo<{ baz::<'b>(&()) }>;
   |                        ^^ cannot perform const operation using `'b`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:46:27
   |
LL |     let _ = Foo::<{ foo::<T>() }>;
   |                           ^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:47:27
   |
LL |     let _ = Foo::<{ bar::<N>() }>;
   |                           ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:50:27
   |
LL |     let _ = Foo::<{ faz::<'a>(&()) }>;
   |                           ^^ cannot perform const operation using `'a`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:52:27
   |
LL |     let _ = Foo::<{ baz::<'a>(&()) }>;
   |                           ^^ cannot perform const operation using `'a`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:53:27
   |
LL |     let _ = Foo::<{ faz::<'b>(&()) }>;
   |                           ^^ cannot perform const operation using `'b`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:55:27
   |
LL |     let _ = Foo::<{ baz::<'b>(&()) }>;
   |                           ^^ cannot perform const operation using `'b`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error[E0747]: unresolved item provided when a constant was expected
  --> $DIR/const-arg-in-const-arg.rs:16:23
   |
LL |     let _: [u8; bar::<N>()];
   |                       ^
   |
help: if this generic argument was intended as a const parameter, surround it with braces
   |
LL |     let _: [u8; bar::<{ N }>()];
   |                       +   +

error[E0284]: type annotations needed
  --> $DIR/const-arg-in-const-arg.rs:16:17
   |
LL |     let _: [u8; bar::<N>()];
   |                 ^^^^^^^^ cannot infer the value of the const parameter `N` declared on the function `bar`
   |
note: required by a const generic parameter in `bar`
  --> $DIR/const-arg-in-const-arg.rs:9:14
   |
LL | const fn bar<const N: usize>() -> usize { N }
   |              ^^^^^^^^^^^^^^ required by this const generic parameter in `bar`

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/const-arg-in-const-arg.rs:19:23
   |
LL |     let _: [u8; faz::<'a>(&())];
   |                       ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/const-arg-in-const-arg.rs:10:14
   |
LL | const fn faz<'a>(_: &'a ()) -> usize { 13 }
   |              ^^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/const-arg-in-const-arg.rs:22:23
   |
LL |     let _: [u8; faz::<'b>(&())];
   |                       ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/const-arg-in-const-arg.rs:10:14
   |
LL | const fn faz<'a>(_: &'a ()) -> usize { 13 }
   |              ^^

error[E0747]: unresolved item provided when a constant was expected
  --> $DIR/const-arg-in-const-arg.rs:37:24
   |
LL |     let _: Foo<{ bar::<N>() }>;
   |                        ^
   |
help: if this generic argument was intended as a const parameter, surround it with braces
   |
LL |     let _: Foo<{ bar::<{ N }>() }>;
   |                        +   +

error[E0284]: type annotations needed
  --> $DIR/const-arg-in-const-arg.rs:37:18
   |
LL |     let _: Foo<{ bar::<N>() }>;
   |                  ^^^^^^^^ cannot infer the value of the const parameter `N` declared on the function `bar`
   |
note: required by a const generic parameter in `bar`
  --> $DIR/const-arg-in-const-arg.rs:9:14
   |
LL | const fn bar<const N: usize>() -> usize { N }
   |              ^^^^^^^^^^^^^^ required by this const generic parameter in `bar`

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/const-arg-in-const-arg.rs:40:24
   |
LL |     let _: Foo<{ faz::<'a>(&()) }>;
   |                        ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/const-arg-in-const-arg.rs:10:14
   |
LL | const fn faz<'a>(_: &'a ()) -> usize { 13 }
   |              ^^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/const-arg-in-const-arg.rs:43:24
   |
LL |     let _: Foo<{ faz::<'b>(&()) }>;
   |                        ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/const-arg-in-const-arg.rs:10:14
   |
LL | const fn faz<'a>(_: &'a ()) -> usize { 13 }
   |              ^^

error: constant expression depends on a generic parameter
  --> $DIR/const-arg-in-const-arg.rs:26:17
   |
LL |     let _ = [0; foo::<T>()];
   |                 ^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error[E0747]: unresolved item provided when a constant was expected
  --> $DIR/const-arg-in-const-arg.rs:27:23
   |
LL |     let _ = [0; bar::<N>()];
   |                       ^
   |
help: if this generic argument was intended as a const parameter, surround it with braces
   |
LL |     let _ = [0; bar::<{ N }>()];
   |                       +   +

error[E0284]: type annotations needed
  --> $DIR/const-arg-in-const-arg.rs:27:17
   |
LL |     let _ = [0; bar::<N>()];
   |                 ^^^^^^^^ cannot infer the value of the const parameter `N` declared on the function `bar`
   |
note: required by a const generic parameter in `bar`
  --> $DIR/const-arg-in-const-arg.rs:9:14
   |
LL | const fn bar<const N: usize>() -> usize { N }
   |              ^^^^^^^^^^^^^^ required by this const generic parameter in `bar`

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/const-arg-in-const-arg.rs:30:23
   |
LL |     let _ = [0; faz::<'a>(&())];
   |                       ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/const-arg-in-const-arg.rs:10:14
   |
LL | const fn faz<'a>(_: &'a ()) -> usize { 13 }
   |              ^^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/const-arg-in-const-arg.rs:33:23
   |
LL |     let _ = [0; faz::<'b>(&())];
   |                       ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/const-arg-in-const-arg.rs:10:14
   |
LL | const fn faz<'a>(_: &'a ()) -> usize { 13 }
   |              ^^

error[E0747]: unresolved item provided when a constant was expected
  --> $DIR/const-arg-in-const-arg.rs:47:27
   |
LL |     let _ = Foo::<{ bar::<N>() }>;
   |                           ^
   |
help: if this generic argument was intended as a const parameter, surround it with braces
   |
LL |     let _ = Foo::<{ bar::<{ N }>() }>;
   |                           +   +

error[E0284]: type annotations needed
  --> $DIR/const-arg-in-const-arg.rs:47:21
   |
LL |     let _ = Foo::<{ bar::<N>() }>;
   |                     ^^^^^^^^ cannot infer the value of the const parameter `N` declared on the function `bar`
   |
note: required by a const generic parameter in `bar`
  --> $DIR/const-arg-in-const-arg.rs:9:14
   |
LL | const fn bar<const N: usize>() -> usize { N }
   |              ^^^^^^^^^^^^^^ required by this const generic parameter in `bar`

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/const-arg-in-const-arg.rs:50:27
   |
LL |     let _ = Foo::<{ faz::<'a>(&()) }>;
   |                           ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/const-arg-in-const-arg.rs:10:14
   |
LL | const fn faz<'a>(_: &'a ()) -> usize { 13 }
   |              ^^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/const-arg-in-const-arg.rs:53:27
   |
LL |     let _ = Foo::<{ faz::<'b>(&()) }>;
   |                           ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/const-arg-in-const-arg.rs:10:14
   |
LL | const fn faz<'a>(_: &'a ()) -> usize { 13 }
   |              ^^

error: aborting due to 40 previous errors

Some errors have detailed explanations: E0284, E0747, E0794.
For more information about an error, try `rustc --explain E0284`.
